@@ -2,6 +2,8 @@
  - fix: false alarms about wrong pyqtgraph version on startup
    (removed the responsible code, because there are now more regular
    releases of pyqtgraph)
+ - enh: allow passing session files, datasets, and filters via the
+   command line (partly #88)
  - ref: avoid pyqtgraph DeprecationWarning due to `translate`
 2.6.5
  - fix: migrate to pg.ColorBarItem (with some manual patches from
